--- a/Savio/ProgressView/CircularProgress.xib
+++ b/Savio/ProgressView/CircularProgress.xib
@@ -100,16 +100,16 @@
                             <real key="value" value="0.40000000000000002"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="number" keyPath="trackThickness">
-                            <real key="value" value="0.29999999999999999"/>
+                            <real key="value" value="0.40000000000000002"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="number" keyPath="glowAmount">
-                            <real key="value" value="1"/>
+                            <real key="value" value="0.0"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="color" keyPath="IBColor1">
                             <color key="value" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="progressInsideFillColor">
-                            <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <userDefinedRuntimeAttribute type="color" keyPath="trackColor">
+                            <color key="value" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
